fix dark mode styles

--- a/src/scss/components/_nft-card.scss
+++ b/src/scss/components/_nft-card.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   border-radius: 4px;
   margin: 1rem;
-  box-shadow: 0 6px 12px 2px #d2d2d2;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .card-img__wrapper {
@@ -19,10 +19,6 @@
 
 .card-info {
   padding: 1rem;
-
-  h3 {
-    color: $text-primary;
-  }
 }
 
 .card-info__actions {
