--- a/src/scss/components/_nft-info-page.scss
+++ b/src/scss/components/_nft-info-page.scss
@@ -1,24 +1,24 @@
 .nft-container {
   display: flex;
   justify-content: center;
-  max-width: 80rem;
-  margin: 0 auto;
+  align-items: center;
+  height: calc(100vh - 64px);
+  padding: 0 2rem;
 }
 
-.spacing {
+.nft-spacing {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  margin: 0 auto;
   align-items: center;
-  height: calc(100vh - 195px);
-  margin: 4rem 0;
 }
 
 .image-container {
   margin: 0 5rem;
+  max-width: 35rem;
 
   img {
     width: 100%;
-    max-width: 37rem;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
       rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
     border-radius: 2px;
@@ -29,10 +29,8 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  flex: 1;
   padding: 2rem 0;
   max-width: 15rem;
-  color: $text-primary;
 }
 
 .nft-description {
@@ -49,7 +47,6 @@
 
 .nft-user {
   display: flex;
-  flex: 1;
   align-items: center;
 }
 
@@ -60,7 +57,6 @@
 .nft-user__info {
   margin-left: 1rem;
   font-size: 0.8rem;
-  color: $text-primary;
 }
 
 .nft-user__role {
