--- a/src/scss/components/_search.scss
+++ b/src/scss/components/_search.scss
@@ -4,7 +4,7 @@
   align-items: center;
   background: #e8e8e8;
   border-radius: 25px;
-  max-width: 100%;
+  max-width: 40rem;
   transition: border 0.2s ease-out;
   border: 1px solid transparent;
 
